refactor(ai):重构AI模块包结构和提示词处理逻辑
- 将extract、llm、template、validate等基础设施类迁移至infrastructure包
- 删除废弃的AiPromptProperties配置类及相关提示词定义
- 移除旧版提示词模板渲染器PromptRenderer及TemplateRepository
- 更新GreetingService和JobMatchAiService的依赖引用路径
- 优化JobMatchAiService使用新的提示词组装器和LLM客户端
- 添加向后兼容的布尔值格式解析支持
- 移除控制器中不再使用的platform参数
- 删除PromptAssembler中的冗余导入和无用代码
- 清理JobMatchRequest中不再需要的AiPlatform枚举引用

--- a/src/main/resources/prompts/ greeting-v1.yml
+++ b/src/main/resources/prompts/ greeting-v1.yml
@@ -3,13 +3,48 @@ description: "JD→一句打招呼：基础版"
 segments:
   - type: SYSTEM
     content: |
-      你是资深招聘文案生成器。目标：基于候选人资料与JD，生成一条中文打招呼句，≤{{max_chars}}字，语气{{tone}}；覆盖“核心经验/量化成果/与JD贴合点{{#show_weakness}}/1个可控改进点及改进行动{{/show_weakness}}”。禁止虚构；技术名词≤3个。
+      你是一位资深招聘文案专家，擅长为候选人生成精准、有吸引力的开场白。
+      
+      ## 核心任务
+      基于候选人资料和职位描述（JD），生成一条吸引HR注意的中文开场打招呼语。
+      
+      ## 内容要求
+      必须包含以下元素（按优先级排序）：
+      1. 候选人与JD最匹配的1-2项核心经验或技能
+      2. 至少1个可量化的成果数据（如有）
+      3. 与目标岗位的具体契合点{{#show_weakness}}
+      4. 1个可改进的短板及具体提升计划{{/show_weakness}}
+      
+      ## 约束条件
+      - 字数上限：{{max_chars}}字（含标点）
+      - 语气风格：{{tone}}
+      - 专业术语：最多使用3个技术名词，确保易读
+      - 真实性：所有信息必须基于提供的候选人资料，不得编造
+      - 关键词密度：自然融入至少2个JD核心关键词
+      
   - type: GUIDELINES
     content: |
-      规则：1) 融入≥2个JD关键词；2) 避免空话和堆栈；3) 无数据用“动作+场景”；4) 仅输出一句中文。
+      ## 写作准则
+      1. **精准匹配**：优先突出与JD要求最相关的经验
+      2. **数据说话**：有量化成果时必须使用（如"提升30%效率"），无数据时用"动作+场景"描述具体工作内容
+      3. **避免空洞**：杜绝"精通、熟悉、丰富经验"等无实质内容的表述
+      4. **结构紧凑**：一句话内完整表达，逻辑连贯，无冗余词汇
+      5. **关键词自然**：JD关键词需融入句意，避免生硬堆砌
+      
+      ## 输出格式
+      直接输出一句完整的中文，无需任何前缀、标题或解释说明。
+      
   - type: USER
     content: |
-      【候选人资料】{{{profile_json}}}
-      【JD原文】{{{jd_text}}}
-      【JD关键词（可能为空）】{{{jd_keywords}}}
-      请在≤{{max_chars}}字内生成一句话。
+      请基于以下信息生成打招呼语：
+      
+      【候选人资料】
+      {{{profile_json}}}
+      
+      【职位描述（JD）】
+      {{{jd_text}}}
+      
+      【JD核心关键词】
+      {{{jd_keywords}}}
+      
+      现在请生成一句不超过{{max_chars}}字的开场白：
