--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
 
     <groupId>com.superxiang</groupId>
     <artifactId>npe_get_jobs</artifactId>
-    <version>v2.1.4</version>
-    <name>get_jobs</name>
+    <version>v1.0.0-SNAPSHOT</version>
+    <name>npe-get-jobs</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
