feat(health): 实现AI模型聚合健康检查模块- 新增AI模型自动发现与并发健康检查功能 - 支持多种检查类型(PING/API_CALL/MODEL_INFO) - 提供详细的健康状态报告和统计信息 - 实现灵活的模型包含/排除配置机制 - 添加完整的API端点和管理接口 - 集成Actuator健康检查体系 - 提供全面的使用文档和配置指南 - 删除原有冗余的单模型检查代码 - 优化配置结构和超时控制机制 - 支持多模型统一监控和告警集成

--- a/src/main/resources/application-actuator.yml
+++ b/src/main/resources/application-actuator.yml
@@ -13,3 +13,22 @@ management:
       enabled: true
       show-details: always
 
+# AI 模型聚合健康检查配置（自动扫描所有模型）
+health:
+  ai-models:
+    enabled: true                    # 是否启用健康检查
+    check-type: PING                 # 检查类型：PING, API_CALL, MODEL_INFO
+    connection-timeout: 5000         # 连接超时（毫秒）
+    response-timeout: 10000          # 响应超时（毫秒）
+    slow-response-threshold: 3000    # 慢响应阈值（毫秒）
+    overall-timeout: 30000           # 整体检查超时（毫秒）
+    test-message: "hello"            # API_CALL 检查时的测试消息
+    
+    # 包含的模型列表（为空则检查所有模型）
+    included-models: []
+    # - chatgptAiChatModel           # OpenAI 模型
+    # - deepseekChatModel            # Deepseek 模型
+    
+    # 排除的模型列表
+    excluded-models: []
+    # - someModelToExclude
